--- a/root-module/build.gradle
+++ b/root-module/build.gradle
@@ -40,9 +40,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-//task wrapper(type: Wrapper) {
-//    gradleVersion = '2.8'
-//}
+wrapper {
+    /* 使用5.4.1版本在idea中会导入项目报错，命令行构建项目没有问题 */
+    gradleVersion='5.4.1'
+//    gradleVersion='4.4'
+}
 
 //指定编译的编码
 tasks.withType(JavaCompile){
