build.gradle中添加日志打印

--- a/java-util/build.gradle
+++ b/java-util/build.gradle
@@ -32,6 +32,9 @@ repositories {
     mavenCentral()
 }
 
+// 打印日志
+logger.quiet('An info log message which is always logged.')
+
 // 跳过javadoc
 //javadoc.enabled = false
 
