--- a/spring-boot-starter/strategy-spring-boot-starter/build.gradle
+++ b/spring-boot-starter/strategy-spring-boot-starter/build.gradle
@@ -9,15 +9,15 @@ group = 'org.chance'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
+
 repositories {
-
+    // 本地maven仓库
     mavenLocal()
-    maven {
-        url "../../../repo"
-    }
-
+    maven { url localMavenRepo }
+    // 阿里的源
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     mavenCentral()
-
 }
 
 /**
