--- a/java-util/build.gradle
+++ b/java-util/build.gradle
@@ -55,4 +55,9 @@ dependencies {
     testImplementation 'org.apache.commons:commons-text:1.7'
 }
 
+wrapper {
+    /* 使用5.4.1版本在idea中会导入项目报错，命令行构建项目没有问题 */
+    gradleVersion='5.4.1'
+}
+
 
