--- a/java-groovy-mixture/build.gradle
+++ b/java-groovy-mixture/build.gradle
@@ -12,7 +12,15 @@ sourceCompatibility = 1.8
 // 确保class文件与targetCompatibility指定版本，或者更新的java虚拟机兼容
 targetCompatibility = 1.8
 
+// 指定上传的路径
+def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
+
 repositories {
+    // 本地maven仓库
+    mavenLocal()
+    maven { url localMavenRepo }
+    // 阿里的源
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     mavenCentral()
 }
 
