--- a/sprint-boot-test/build.gradle
+++ b/sprint-boot-test/build.gradle
@@ -20,10 +20,15 @@ configurations {
     }
 }
 
-repositories {
-    // 修改阿里源
-    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+// 指定上传的路径
+def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
 
+repositories {
+    // 本地maven仓库
+    mavenLocal()
+    maven { url localMavenRepo }
+    // 阿里的源
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     mavenCentral()
 }
 
@@ -54,4 +59,9 @@ test {
 asciidoctor {
     inputs.dir snippetsDir
     dependsOn test
+}
+
+wrapper {
+    /* 使用5.4.1版本在idea中会导入项目报错，命令行构建项目没有问题 */
+    gradleVersion='5.4.1'
 }
