--- a/spring-boot-starter/strategy-spring-boot-starter/build.gradle
+++ b/spring-boot-starter/strategy-spring-boot-starter/build.gradle
@@ -25,7 +25,11 @@ repositories {
  *
  * api：当其他模块依赖于此模块时，此模块使用api声明的依赖包是可以被其他模块使用
  * implementation：当其他模块依赖此模块时，此模块使用implementation声明的依赖包只限于模块内部使用，不允许其他模块使用。
+ *
+ * All api dependencies are marked as compile while implementation dependencies are marked as runtime.
  */
+
+// gradle <cmd> --refresh-dependencies 强制刷新依赖不使用本地缓存
 dependencies {
     api('org.chance:strategy-spring-boot-autoconfigure:0.0.1-SNAPSHOT')
 }
