--- a/spring-boot-starter/settings.gradle
+++ b/spring-boot-starter/settings.gradle
@@ -1,7 +1,1 @@
-rootProject.name = 'spring-boot-starter'
-
-include ':strategy-spring-boot-starter', ':strategy-spring-boot-autoconfigure'
-
-// examples
-include 'examples:strategy-starter'
-
+rootProject.name = 'elastic-job-spring-boot-starter'
