--- a/spring-boot-starter/strategy-spring-boot-autoconfigure/build.gradle
+++ b/spring-boot-starter/strategy-spring-boot-autoconfigure/build.gradle
@@ -44,6 +44,9 @@ jar {
  *
  * api：当其他模块依赖于此模块时，此模块使用api声明的依赖包是可以被其他模块使用
  * implementation：当其他模块依赖此模块时，此模块使用implementation声明的依赖包只限于模块内部使用，不允许其他模块使用。
+ *
+ * All api dependencies are marked as compile while implementation dependencies are marked as runtime.
+ *
  */
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
