--- a/java-spring-feature/build.gradle
+++ b/java-spring-feature/build.gradle
@@ -71,6 +71,8 @@ dependencies {
 //    runtimeOnly 'com.h2database:h2'
     implementation 'com.h2database:h2'
 
+    implementation 'org.chance:elastic-job-spring-boot-starter:0.0.1-SNAPSHOT'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
