--- a/java-spring-feature/src/main/resources/config/application-dev.yml
+++ b/java-spring-feature/src/main/resources/config/application-dev.yml
@@ -81,3 +81,7 @@ spring:
             threadCount: 10
             threadPriority: 5
             threadsInheritContextClassLoaderOfInitializingThread: true
+elastic-job:
+  zk:
+    serverLists: localhost:2181
+    namespace: elastic-job
