--- a/micro-service/dubbo-provider/src/main/resources/config/application.properties
+++ b/micro-service/dubbo-provider/src/main/resources/config/application.properties
@@ -9,6 +9,11 @@ logging.level.com.alibaba.dubbo = debug
 dubbo.protocol.id=dubbo
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
+# 序列化的方式： kryo、fst 都比默认的性能高，测试发现 对于自定义RuntimeException不能正常捕获，
+# 网上说出参入参添加属性也会导致序列化失败
+#dubbo.protocol.serialization=kryo
+#dubbo.protocol.serialization=fst
+
 
 ## Dubbo Registry
 
