--- a/micro-service/dubbo-consumer/src/main/resources/config/application.properties
+++ b/micro-service/dubbo-consumer/src/main/resources/config/application.properties
@@ -10,6 +10,11 @@ dubbo.scan.basePackages=org.chance.dubbo.consumer.controller
 dubbo.protocol.id=dubbo
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
+# 序列化的方式： kryo、fst 都比默认的性能高，测试发现 对于自定义RuntimeException不能正常捕获，
+# 网上说出参入参添加属性也会导致序列化失败
+#dubbo.protocol.serialization=kryo
+#dubbo.protocol.serialization=fst
+
 
 # 注册中心
 dubbo.registry.id=dubboRegistry
