--- a/micro-service/dubbo-consumer/build.gradle
+++ b/micro-service/dubbo-consumer/build.gradle
@@ -56,5 +56,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // 如果想要test中使用lombok 则需要引入相应的包
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 解决使用 org.hibernate:hibernate-validator:4.2.0.Final 在junit跑报错的问题
+    testImplementation 'org.hibernate:hibernate-validator:5.1.0.Final';
 }
