--- a/micro-service/dubbo-provider/src/main/resources/config/application.properties
+++ b/micro-service/dubbo-provider/src/main/resources/config/application.properties
@@ -45,3 +45,5 @@ dubbo.application.qos-enable=true
 dubbo.application.qos-port=22222
 dubbo.application.qos-accept-foreign-ip=true
 
+# Dubbo可以自动加载classpath根目录下的dubbo.properties，但是你同样可以使用JVM参数来指定路径：-Ddubbo.properties.file=xxx.properties。
+
