--- a/micro-service/dubbo-consumer/build.gradle
+++ b/micro-service/dubbo-consumer/build.gradle
@@ -64,5 +64,5 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // 解决使用 org.hibernate:hibernate-validator:4.2.0.Final 在junit跑报错的问题
-    testImplementation 'org.hibernate:hibernate-validator:5.1.0.Final';
+    testImplementation 'org.hibernate:hibernate-validator:6.0.3.Final'
 }
