--- a/spring-boot-starter/settings.gradle
+++ b/spring-boot-starter/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'spring-boot-starter'
 
 include ':strategy-spring-boot-starter', ':strategy-spring-boot-autoconfigure'
 include ':elastic-job-spring-boot-starter'
+include ':distributelock-spring-boot-starter'
 
 // examples
 include 'examples:strategy-starter'
