--- a/design-pattern/build.gradle
+++ b/design-pattern/build.gradle
@@ -1,48 +1,52 @@
-group 'org.chance'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-//apply plugin:'templates'
-
+// 需要部署jar包的项目
+// Gradle 3.4+ 使用java-library插件替换java插件
+apply plugin: 'java-library'
 // 使用自定义插件
 //apply plugin: 'plugin.test'
 
-sourceCompatibility = 1.8
+// 读取的gradle.properties中的变量
+group = "${group}"
+version = "${version}"
 
-ext{
+//  指定编码环境:指定编译编译.java文件的jdk版本
+sourceCompatibility = JavaVersion.VERSION_1_8
+//  指定编译环境:确保class文件与targetCompatibility指定版本，或者更新的java虚拟机兼容
+targetCompatibility = JavaVersion.VERSION_1_8
 
+
+ext {
+    lombok = '1.18.8'
+    cglibVersion = '3.2.2'
+    junitVersion = '4.11'
 }
 
-buildscript {
-    repositories {
-        maven {
-            url 'http://dl.bintray.com/cjstehno/public'
-        }
-//        maven {
-//            url uri('../repo')
-//        }
-    }
-    dependencies {
-//        classpath 'gradle-templates:gradle-templates:1.5'
-//        classpath 'gradle-plugin:gradle-plugin:1.0'
-    }
-}
+[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
 
-// 指定上传的路径
 def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
 
+logger.quiet(localMavenRepo)
+
 repositories {
+    maven { url localMavenRepo }
     // 本地maven仓库
     mavenLocal()
-    maven { url localMavenRepo }
     // 阿里的源
     maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     mavenCentral()
 }
 
 dependencies {
-    compile("cglib:cglib:3.2.2")
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    // lombok配置
+    // idea中如果出现单元测试有问题
+    // 需要设置 File | Settings | Build, Execution, Deployment | Compiler | Annotation Processors
+    annotationProcessor "org.projectlombok:lombok:${lombok}"
+    compileOnly "org.projectlombok:lombok:${lombok}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombok}"
+    testCompileOnly "org.projectlombok:lombok:${lombok}"
+
+    compile("cglib:cglib:${cglibVersion}")
+    testCompile group: 'junit', name: 'junit', version: "${junitVersion}"
 }
 
 //指定编译的编码
@@ -51,6 +55,6 @@ tasks.withType(JavaCompile){
 }
 
 wrapper {
-    /* 使用5.4.1版本在idea中会导入项目报错，命令行构建项目没有问题 */
-    gradleVersion='5.4.1'
+    /* 使用5.6.4版本在idea中会导入项目报错，命令行构建项目没有问题 */
+    gradleVersion = '5.6.4'
 }
