--- a/java-spring-feature/build.gradle
+++ b/java-spring-feature/build.gradle
@@ -1,17 +1,20 @@
-plugins {
-    id 'org.springframework.boot' version '2.1.6.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'java'
+// 需要部署jar包的项目
+// Gradle 3.4+ 使用java-library插件替换java插件
+apply plugin: 'java-library'
+
+// 读取的gradle.properties中的变量
+group = "${group}"
+version = "${version}"
+
+//  指定编码环境:指定编译编译.java文件的jdk版本
+sourceCompatibility = JavaVersion.VERSION_1_8
+//  指定编译环境:确保class文件与targetCompatibility指定版本，或者更新的java虚拟机兼容
+targetCompatibility = JavaVersion.VERSION_1_8
+
+ext {
+    lombok = '1.18.8'
+    springBootVersion = '2.1.6.RELEASE'
 }
-
-group = 'org.chance'
-version = '0.0.1-SNAPSHOT'
-
-// 指定编码环境
-sourceCompatibility JavaVersion.VERSION_1_8
-
-// 指定编译环境
-targetCompatibility JavaVersion.VERSION_1_8
 
 configurations {
     developmentOnly
@@ -23,48 +26,26 @@ configurations {
     }
 }
 
+[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
+
 def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
 
+logger.quiet(localMavenRepo)
+
 repositories {
+    maven { url localMavenRepo }
     // 本地maven仓库
     mavenLocal()
-    maven { url localMavenRepo }
     // 阿里的源
     maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     mavenCentral()
 }
 
-allprojects {
-//    apply plugin:'templates'
-    wrapper {
-        /* 使用5.4.1版本在idea中会导入项目报错，命令行构建项目没有问题 */
-        gradleVersion = '5.4.1'
-    }
-
-    compileJava {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
-        options.encoding = 'UTF-8'
-    }
-
-    //指定编译的编码
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
-    }
-
-    // Gradle解决JavaDoc中文乱码问题
-    javadoc {
-        options {
-            encoding "UTF-8"
-            charSet 'UTF-8'
-            author true
-            version true
-            title "文档大标题"
-        }
-    }
-}
-
 dependencies {
+
+    // import a BOM
+    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -77,7 +58,7 @@ dependencies {
     implementation 'com.h2database:h2'
 
     implementation 'org.chance:elastic-job-spring-boot-starter:0.0.1-SNAPSHOT'
-    jooqRuntime 'postgresql:postgresql:9.1-901.jdbc4'
+//    jooqRuntime 'postgresql:postgresql:9.1-901.jdbc4'
 
     implementation 'org.jooq:jooq'
 
@@ -87,7 +68,17 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-jooq {
-    version = '3.12.3' // the default (can be omitted)
-    edition = 'OSS'    // the default (can be omitted), other allowed values are PRO, PRO_JAVA_6, and TRIAL
+//指定编译的编码
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
 }
+
+wrapper {
+    /* 使用5.6.4版本在idea中会导入项目报错，命令行构建项目没有问题 */
+    gradleVersion = '5.6.4'
+}
+
+//jooq {
+//    version = '3.12.3' // the default (can be omitted)
+//    edition = 'OSS'    // the default (can be omitted), other allowed values are PRO, PRO_JAVA_6, and TRIAL
+//}
