--- a/java-spring-feature/src/main/resources/config/application.properties
+++ b/java-spring-feature/src/main/resources/config/application.properties
@@ -1,1 +1,8 @@
 logging.level.root = info
+server.port=8080
+
+# 是否开启自动重启 classpath内容改变
+spring.devtools.restart.enabled=true
+
+# 重启，触发器文件，当该文件修改的时候 restart
+spring.devtools.restart.trigger-file=config/application.properties
