--- a/java-spring-feature/build.gradle
+++ b/java-spring-feature/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // 此包包含aspectjweaver这个依赖
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    // 引入mybatis
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
     
     implementation 'org.flywaydb:flyway-core'
     // 加入了H2 数据库的引用的话，其将会把数据持久化到H2 内存数据库中。
