--- a/java-spring-feature/build.gradle
+++ b/java-spring-feature/build.gradle
@@ -49,11 +49,20 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation 'com.github.kstyrc:embedded-redis:0.6'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    implementation 'org.apache.curator:curator-recipes:4.2.0'
+
     // 此包包含aspectjweaver这个依赖
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
     // 引入mybatis
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
+
+    // 使用cache
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     
     implementation 'org.flywaydb:flyway-core'
     // 加入了H2 数据库的引用的话，其将会把数据持久化到H2 内存数据库中。
